# gecko2

./: CMakeLists.txt  README.md  main_blocker.cpp
cblock/: CMakeLists.txt
cblock/inc/gecko/cblock/: Blocking.h  BlockingClassifier.h  Graph.h
cblock/src/: Blocking.cpp  BlockingClassifier.cpp  Graph.cpp
cblock/tst/: CMakeLists.txt  cblock_tests.cpp
gmds_core/: CMakeLists.txt
gmds_core/cad/: CMakeLists.txt
gmds_core/cad/inc/gmds/cad/: GeomCurve.h  GeomEntity.h  GeomManager.h  GeomMeshLinker.h  GeomPoint.h  GeomSurface.h  GeomVolume.h
gmds_core/cad/src/: GeomMeshLinker.cpp
gmds_core/cadfac/: CMakeLists.txt
gmds_core/cadfac/inc/gmds/cadfac/: FACCurve.h  FACManager.h  FACPoint.h  FACSurface.h  FACVolume.h
gmds_core/cadfac/src/: FACCurve.cpp  FACManager.cpp  FACPoint.cpp  FACSurface.cpp  FACVolume.cpp
gmds_core/cadfac/tst/: CMakeLists.txt  fac_manager_tests.cpp  geom_linker_tests.cpp  geom_topology_tests.cpp
gmds_core/ig/: CMakeLists.txt
gmds_core/ig/inc/gmds/ig/: Cell.h  Edge.h  EdgeContainer.h  Face.h  FaceContainer.h  Mesh.h  MeshDoctor.h  Node.h  NodeContainer.h  Region.h  RegionContainer.h
gmds_core/ig/src/: Cell.cpp  Edge.cpp  MeshDoctor.cpp  Region.cpp
gmds_core/ig/tst/: CMakeLists.txt  boolean_mark_tests.cpp  doctor_tests.cpp  edge_tests.cpp  mesh_tests.cpp
gmds_core/igalgo/: CMakeLists.txt
gmds_core/igalgo/inc/gmds/igalgo/: BoundaryExtractor2D.h  BoundaryExtractor3D.h  BoundaryOperator.h  BoundaryOperator2D.h  GridBuilder.h  SurfaceReorient.h  THexBuilder.h
gmds_core/igalgo/src/: BoundaryExtractor3D.cpp
gmds_core/igalgo/tst/: CMakeLists.txt  boundary_extractor_tests.cpp  boundary_operator_tests.cpp  grid_builder_tests.cpp  surface_reorient_tests.cpp
gmds_core/io/: CMakeLists.txt
gmds_core/io/inc/gmds/io/: GMSHWriter.h  IGMeshIOService.h  IMeshIOService.h  IReader.h  IWriter.h  MeditReader.h
gmds_core/io/tst/: CMakeLists.txt  reader_tests.cpp  writer_tests.cpp
gmds_core/math/: CMakeLists.txt
gmds_core/math/inc/gmds/math/: AxisAngleRotation.h  Chart.h  Constants.h  Cross.h  Cross2D.h  Hexahedron.h  Line.h  Matrix.h  Numerics.h  Orientation.h  Plane.h  Point.h  Prism3.h  Pyramid.h  Quadrilateral.h  Quaternion.h  Ray.h  Segment.h  Tetrahedron.h  Triangle.h  Vector.h  VectorDyn.h
gmds_core/math/src/: AxisAngleRotation.cpp  Chart.cpp  Cross.cpp  Cross2D.cpp  Numerics.cpp  Quaternion.cpp  Segment.cpp  Triangle.cpp
gmds_core/math/tst/: CMakeLists.txt  math_tests.cpp  point_tests.cpp
gmds_core/utils/: CMakeLists.txt
gmds_core/utils/inc/gmds/utils/: BitVector.h  CommonFlags.h  CommonTypes.h  Variable.h  VariableManager.h
gmds_core/utils/src/: BitVector.cpp
gmds_core/utils/tst/: CMakeLists.txt  utils_tests.cpp
mcts/: CMakeLists.txt
mcts/inc/gecko/mcts/: BlockingAction.h  BlockingRewardFunction.h  BlockingState.h  IRewardFunction.h  IState.h  MCTSAgent.h  MCTSLoop.h  MCTSSelectionFunction.h  MCTSTree.h
mcts/src/: BlockingAction.cpp  BlockingRewardFunction.cpp  BlockingState.cpp  MCTSAgent.cpp  MCTSLoop.cpp  MCTSSelectionFunction.cpp  MCTSTree.cpp
test_data/: params.json  reorient3D_test.vtk
test_data/AxisAlign/: T_shape.vtk  U_shape.vtk  XXYZ.vtk  XYZ.vtk  cube.json  cube_minus_corner.vtk  cube_minus_opp_edges.vtk  cube_without_two_cubes.vtk  encoches.vtk  hole.vtk  polycube.vtk  polycubeRefine.vtk  teeth.vtk
test_data/Curve/: B16.vtk  B17.vtk  B18.vtk  B46.vtk  B64.vtk  B9.vtk  cube_minus_cyl_edge.geo  cube_minus_cyl_edge.vtk  curved_shape_1.vtk  curved_shape_2.vtk  cylinder_quart.vtk  quarter_hollow_sphere.vtk
test_data/NonAxisAlign/: B35.vtk
test_data/PolycubeLike/: cube_minus_edge.vtk  cube_with_holes.vtk  cube_with_notch.vtk
valid/: check.py
